--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,17 @@
       <version>2.4</version>
       <classifier>jdk15</classifier>
     </dependency>
+    <!-- fileupload -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>1.4</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.2.1</version>
+    </dependency>
   </dependencies>
 
   <build>
